--- a/styles/global.css
+++ b/styles/global.css
@@ -14,9 +14,10 @@ html {
 }
 
 body {
-  --notion-font: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-    'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-    'Droid Sans', 'Helvetica Neue', 'Noto Sans', sans-serif;
+  /*--notion-font: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,*/
+  /*  'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',*/
+  /*  'Droid Sans', 'Helvetica Neue', 'Noto Sans', sans-serif;*/
+  --notion-font: "Andale Mono";
   font-family: var(--notion-font);
   overflow-x: hidden;
 }
