--- a/styles/notion.css
+++ b/styles/notion.css
@@ -42,6 +42,10 @@
 .notion-header .notion-nav-header {
   max-width: 1100px;
   margin: 0 auto;
+  font-weight: bold;
+  font-family: 'Helvetica Neue';
+  letter-spacing: 3px;
+  font-style: italic;
 }
 
 .notion-nav-header-rhs {
@@ -49,7 +53,7 @@
 }
 
 .notion-gallery-grid {
-  grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-gap: 6vmin;
   gap: 6vmin;
 }
@@ -164,6 +168,10 @@
 .notion-title {
   display: block;
   text-align: center;
+  font-weight: bolder;
+  font-family: "Helvetica Neue";
+  letter-spacing: 5px;
+  font-style: italic;
 }
 
 .notion-collection-row {
