--- a/styles/global.css
+++ b/styles/global.css
@@ -14,10 +14,10 @@ html {
 }
 
 body {
-  /*--notion-font: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,*/
-  /*  'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',*/
-  /*  'Droid Sans', 'Helvetica Neue', 'Noto Sans', sans-serif;*/
-  --notion-font: "Andale Mono";
+  --notion-font: ui-sans-serif, system-ui, -apple-system, 'Segoe UI', 'Roboto',
+    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    'Noto Sans', sans-serif;
+  /* --notion-font: monospace; */
   font-family: var(--notion-font);
   overflow-x: hidden;
 }
